
  [ Raphael Geissert ]
  * apt-pkg/acquire*.cc:
    - handle redirections in the worker with the right method instead of
      in the method the redirection occured in (Closes: #668111)
  * methods/http.cc:
    - forbid redirects to change protocol
  * methods/mirror.cc:
    - generate an equal sign also for the first arch (Closes: #669142)


 -- David Kalnischkies <kalnischkies@gmail.com>  Fri, 11 May 2012 23:26:59 +0200

apt (0.9.3) unstable; urgency=low

  [ David Kalnischkies ]
  * apt-pkg/contrib/strutl.cc:
    - remove the message size limit from ioprintf and strprintf
  * apt-pkg/contrib/configuration.cc:
    - add a more versatile Dump() method
    - normalize a bit by replacing // and /./ with / in FindFile
    - /dev/null is a special absolute path as it has no subdirectories
  * apt-pkg/acquire-worker.cc:
    - use Dump() to generate the configuration message for sending
  * cmdline/apt-config.cc:
    - make it possible to limit dump to a subtree
    - implement --empty and --format option for dump
  * apt-pkg/cdrom.cc:
    - use Dump() to generate the configuration output
  * apt-pkg/depcache.cc:
    - clearly separate 'positive' and 'negative' dependencies and
      their upgrade-resolution tries in MarkInstall and especially don't
      treat Conflicts differently compared to Breaks here
    - provider is only a possible solution if the provides has the right
      version (or none as we have no versioned provides in debian) and not
      if the version of the provider matches
  * edsp/edspsystem.cc:
    - check with RealFileExists for scenario file as otherwise a directory
      like one provided with RootDir triggers the usage of EDSP
  * debian/libapt-inst1.5.symbols:
    - use the correct library name the symbols header
  * apt-pkg/pkgcachegen.cc:
    - check if NewDescription allocation has failed and error out accordingly
    - check if we work on a valid description in IsDuplicateDescription as