@@ -32,6 +32,10 @@ apt (0.9.4) UNRELEASED; urgency=low
     - generate an equal sign also for the first arch (Closes: #669142)
 
 
+  [ Marius Vollmer ]
+  * apt-pkg/algorithms.cc:
+    - fix memory leak of Flags in pkgSimulate by a proper destructor
+
  -- David Kalnischkies <kalnischkies@gmail.com>  Fri, 11 May 2012 23:26:59 +0200
 
 apt (0.9.3) unstable; urgency=low
